--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-Hello EVERYONE!!!
+<div class="card">
+    <div class="card-left">
+        <h3>Main data:</h3>
+        Name: <span class="main-data">Erofeevskiy Yurii Aleksandrovich</span>. <br>
+        Age: <span class="main-data">00100001</span> <br>
+        Specialty: <span class="main-data">Java Software Engineer</span> <br>
+        <h3>Description:</h3>
+        <div class="desctiption">
+            I'm a Java Software Engineer in one of startup company.
+        </div>
+    </div>
+    <div class="photo">
+        <img src="img/photo.jpeg" alt="photo" width="250" height="300px">
+    </div>
+</div>
 </body>
 </html>
