--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Software Development</title>
+    <title>Software Engineering</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="card">
     <div class="card-left">
-        <h3>Main data:</h3>
-        Name: <span class="main-data">Erofeevskiy Yurii Aleksandrovich</span>. <br>
-        Age: <span class="main-data">00100001</span> <br>
-        Specialty: <span class="main-data">Java Software Engineer</span> <br>
+        <h3>Person data:</h3>
+       <p> Name: <span class="main-data">Erofeevskiy Yurii Aleksandrovich</span>. <br></p>
+        <p>Age: <span class="main-data">00100001</span> <br></p>
+        <p>Specialty: <span class="main-data">Java Software Engineer</span> <br></p>
         <h3>Description:</h3>
         <div class="desctiption">
             I'm a Java Software Engineer in one of startup company.
