--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="head-menu">
+    <div class="logo"></div>
+    <div class="main-buttons">
+        <a href="index.html">Main</a>
+    </div>
+    <div class="main-buttons">
+        <a href="about.html">About</a>
+    </div>
+</div>
+
 <div class="card">
-    <div class="card-left">
-        <h3>Person data:</h3>
-       <p> Name: <span class="main-data">Erofeevskiy Yurii Aleksandrovich</span>. <br></p>
-        <p>Age: <span class="main-data">00100001</span> <br></p>
-        <p>Specialty: <span class="main-data">Java Software Engineer</span> <br></p>
-        <h3>Description:</h3>
-        <div class="desctiption">
-            I'm a Java Software Engineer in one of startup company.
-        </div>
-    </div>
-    <div class="photo">
-        <img src="img/photo.jpeg" alt="photo" width="250" height="300px">
-    </div>
+    Hello world!!!
 </div>
 </body>
 </html>
