--- a/about.html
+++ b/about.html
@@ -9,10 +9,20 @@
 <div class="head-menu">
     <div class="logo"></div>
     <div class="main-buttons">
-        <a href="index.html">Main</a>
+        <a href="index.html" class="button">
+            <span class="button-line button-line__top"></span>
+            <span class="button-line button-line__right"></span>
+            <span class="button-line button-line__bottom"></span>
+            <span class="button-line button-line__left"></span>
+            Main</a>
     </div>
     <div class="main-buttons">
-        <a href="about.html">About</a>
+        <a href="about.html" class="button">
+            <span class="button-line button-line__top"></span>
+            <span class="button-line button-line__right"></span>
+            <span class="button-line button-line__bottom"></span>
+            <span class="button-line button-line__left"></span>
+            About</a>
     </div>
 </div>
 <div class="card">
