--- a/index.html
+++ b/index.html
@@ -4,20 +4,54 @@
     <meta charset="UTF-8">
     <title>Software Engineering</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="libs/gsap/gsap.min.js" defer></script>
+    <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+    <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+
+    <script src="js/app.js" defer></script>
 </head>
 <body>
-<div class="head-menu">
-    <div class="logo"></div>
-    <div class="main-buttons">
-        <a href="index.html">Main</a>
-    </div>
-    <div class="main-buttons">
-        <a href="about.html">About</a>
-    </div>
-</div>
+<div class="wrapper">
+    <div class="content">
+        <div class="head-menu">
+            <div class="logo"></div>
+            <div class="main-buttons">
+                <a href="index.html" class="button">
+                    <span class="button-line button-line__top"></span>
+                    <span class="button-line button-line__right"></span>
+                    <span class="button-line button-line__bottom"></span>
+                    <span class="button-line button-line__left"></span>
+                    Main
+                </a>
+                <a href="about.html" class="button">
+                    <span class="button-line button-line__top"></span>
+                    <span class="button-line button-line__right"></span>
+                    <span class="button-line button-line__bottom"></span>
+                    <span class="button-line button-line__left"></span>
+                    About</a>
+            </div>
+        </div>
+        <header class="main-header">
+            <div class="layers">
+                <div class="layer__header">
+                    <div class="layers__caption">Welcome, friends!</div>
+                    <div class="layers__title">Glad to see you</div>
+                </div>
+                <div class="layer layers__base" style="background-image: url(img/layer-base.png)"></div>
+                <div class="layer layers__middle" style="background-image: url(img/layer-middle.png)"></div>
+                <div class="layer layers__front" style="background-image: url(img/layer-front.png)"></div>
+            </div>
+        </header>
 
-<div class="card">
-    Hello world!!!
+        <article class="main-article" style="background-image: url(img/dungeon.jpg)">
+            <div class="main-article__content">
+                <h1 class="main-article__header">To be continued...</h1>
+                <p class="main-article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Accusantium aliquid aspernatur atque consequuntur corporis ducimus, explicabo fuga in iusto mollitia officia quae quibusdam quidem ratione sapiente veniam vitae voluptas voluptatem.</p>
+            </div>
+        </article>
+    </div>
 </div>
 </body>
 </html>
