add space theme

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
         </div>
         <header class="main-header">
             <div class="layers">
-                <div class="layer__header">
-                    <div class="layers__caption">Welcome, friends!</div>
-                    <div class="layers__title">Glad to see you</div>
+                <div class="layer__header" style="z-index: 4">
+<!--                <div class="layer__header">-->
+                    <div class="layers__caption">Welcome to my</div>
+                    <div class="layers__title">space</div>
                 </div>
-                <div class="layer layers__base" style="background-image: url(img/layer-base.png)"></div>
-                <div class="layer layers__middle" style="background-image: url(img/layer-middle.png)"></div>
-                <div class="layer layers__front" style="background-image: url(img/layer-front.png)"></div>
+<!--                <div class="layer layers__base" style="background-image: url(img/layer-base.png)"></div>-->
+<!--                <div class="layer layers__middle" style="background-image: url(img/layer-middle.png)"></div>-->
+<!--                <div class="layer layers__front" style="background-image: url(img/layer-front.png)"></div>-->
+                <div class="layer layers__base" style="background-image: url(img/space-back.jpeg)"></div>
+                <div class="layer layers__middle" style="background-image: url(img/space-middle.png)"></div>
+                <div class="layer layers__front" style="background-image: url(img/drednout.png); height: 40%; width: 40%"></div>
             </div>
         </header>
 
