--- a/about.html
+++ b/about.html
@@ -6,36 +6,28 @@
     <title>About</title>
 </head>
 <body>
-<div class="head-menu">
-    <div class="logo"></div>
-    <div class="main-buttons">
-        <a href="index.html" class="button">
-            <span class="button-line button-line__top"></span>
-            <span class="button-line button-line__right"></span>
-            <span class="button-line button-line__bottom"></span>
-            <span class="button-line button-line__left"></span>
-            Main</a>
-        <a href="about.html" class="button">
-            <span class="button-line button-line__top"></span>
-            <span class="button-line button-line__right"></span>
-            <span class="button-line button-line__bottom"></span>
-            <span class="button-line button-line__left"></span>
-            About</a>
-    </div>
-</div>
-<div class="card">
-    <div class="card-left">
-        <h3>Person data:</h3>
-        <p> Name: <span class="main-data">Erofeevskiy Yurii Aleksandrovich</span>. <br></p>
-        <p>Age: <span class="main-data">00100001</span> <br></p>
-        <p>Specialty: <span class="main-data">Java Software Engineer</span> <br></p>
-        <h3>Description:</h3>
-        <div class="desctiption">
-            I'm a Java Software Engineer in one of startup company.
+<div class="wrapper">
+    <div class="content">
+        <div class="main-container">
+            <div class="head-menu">
+                <div class="logo"></div>
+                <div class="main-buttons">
+                    <a href="index.html" class="button">
+                        <span class="button-line button-line__top"></span>
+                        <span class="button-line button-line__right"></span>
+                        <span class="button-line button-line__bottom"></span>
+                        <span class="button-line button-line__left"></span>
+                        Main</a>
+                    <a href="about.html" class="button">
+                        <span class="button-line button-line__top"></span>
+                        <span class="button-line button-line__right"></span>
+                        <span class="button-line button-line__bottom"></span>
+                        <span class="button-line button-line__left"></span>
+                        About</a>
+                </div>
+            </div>
+            <div class="layers"><h1>See you soon</h1></div>
         </div>
-    </div>
-    <div class="photo">
-        <img src="img/photo.jpeg" alt="photo" width="250" height="300px">
     </div>
 </div>
 </body>
