--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <header class="main-header">
             <div class="layers">
-                <div class="layer__header" style="z-index: 4">
-<!--                <div class="layer__header">-->
+<!--                <div class="layer__header" style="z-index: 4">-->
+                <div class="layer__header">
                     <div class="layers__caption">Welcome to my</div>
                     <div class="layers__title">space</div>
                 </div>
@@ -44,11 +44,11 @@
 <!--                <div class="layer layers__front" style="background-image: url(img/layer-front.png)"></div>-->
                 <div class="layer layers__base" style="background-image: url(img/space-back.jpeg)"></div>
                 <div class="layer layers__middle" style="background-image: url(img/space-middle.png)"></div>
-                <div class="layer layers__front" style="background-image: url(img/drednout.png); height: 40%; width: 40%"></div>
+                <div class="layer layers__front" style="background-image: url(img/drednout-center-left.png)"></div>
             </div>
         </header>
 
-        <article class="main-article" style="background-image: url(img/dungeon.jpg)">
+        <article class="main-article" style="background-image: url(img/earth-core.jpeg)">
             <div class="main-article__content">
                 <h1 class="main-article__header">To be continued...</h1>
                 <p class="main-article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
