--- a/about.html
+++ b/about.html
@@ -2,31 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
     <title>About</title>
+    <link rel="stylesheet" href="css/style.css">
+
+    <script src="libs/gsap/gsap.min.js" defer></script>
+    <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+    <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+
+    <script src="js/app.js" defer></script>
 </head>
 <body>
 <div class="wrapper">
     <div class="content">
-        <div class="main-container">
-            <div class="head-menu">
-                <div class="logo"></div>
-                <div class="main-buttons">
-                    <a href="index.html" class="button">
-                        <span class="button-line button-line__top"></span>
-                        <span class="button-line button-line__right"></span>
-                        <span class="button-line button-line__bottom"></span>
-                        <span class="button-line button-line__left"></span>
-                        Main</a>
-                    <a href="about.html" class="button">
-                        <span class="button-line button-line__top"></span>
-                        <span class="button-line button-line__right"></span>
-                        <span class="button-line button-line__bottom"></span>
-                        <span class="button-line button-line__left"></span>
-                        About</a>
-                </div>
+        <div class="head-menu">
+            <div class="logo"></div>
+            <div class="main-buttons">
+                <a href="index.html" class="button">
+                    <span class="button-line button-line__top"></span>
+                    <span class="button-line button-line__right"></span>
+                    <span class="button-line button-line__bottom"></span>
+                    <span class="button-line button-line__left"></span>
+                    Main</a>
+                <a href="about.html" class="button">
+                    <span class="button-line button-line__top"></span>
+                    <span class="button-line button-line__right"></span>
+                    <span class="button-line button-line__bottom"></span>
+                    <span class="button-line button-line__left"></span>
+                    About</a>
             </div>
-            <div class="layers"><h1>See you soon</h1></div>
+        </div>
+        <header class="about-main-header">
+            <div class="about-layers">
+                <div class="profile"></div>
+                <div class="about-layer about-layer__base" style="background-image: url(img/layer-base.png)"></div>
+                <div class="about-layer about-layer__middle" style="background-image: url(img/layer-middle.png)"></div>
+                <div class="about-layer about-layer__front" style="background-image: url(img/layer-front.png)"></div>
+            </div>
+        </header>
+        <div class="about-body">
+            <article class="main-article" style="background-image: url(img/dungeon.jpg)">
+                <div class="main-article__content">
+                    <h1 class="main-article__header">To be continued...</h1>
+                    <p class="main-article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Accusantium aliquid aspernatur atque consequuntur corporis ducimus, explicabo fuga in iusto mollitia officia quae quibusdam quidem ratione sapiente veniam vitae voluptas voluptatem.</p>
+                </div>
+            </article>
         </div>
     </div>
 </div>
