--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         <article class="main-article" style="background-image: url(img/earth-core.jpeg)">
             <div class="main-article__content">
                 <h1 class="main-article__header">To be continued...</h1>
-                <p class="main-article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Accusantium aliquid aspernatur atque consequuntur corporis ducimus, explicabo fuga in iusto mollitia officia quae quibusdam quidem ratione sapiente veniam vitae voluptas voluptatem.</p>
+                <p class="main-article__paragraph">
+                    Это моя страница, предназначение которой еще не известно. Возможно я напишу о себе, может это будет сайт с портфолио, скилами и описанием проектов,
+                    Возможно это будет что-то другое.
+                </p>
             </div>
         </article>
     </div>
