--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
 
     <script src="js/app.js" defer></script>
+    <script src="https://kit.fontawesome.com/c56eff491d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -33,7 +34,78 @@
         </div>
         <header class="about-main-header">
             <div class="about-layers">
-                <div class="profile"></div>
+                <div class="profile">
+                    <div class="left-side">
+                        <div class="left left-side__name">
+                            <h1>Ерофеевский Юрий Александрович</h1>
+                            <h3>Java Software Engineer</h3>
+                            <div style="display: flex; flex-direction: row; padding-right: 200px; font-size: calc(var(--index))">
+                                <div style="margin-right: calc(var(--index) * 5)">
+                                    <p>
+                                        <i class="fas fas-mini fa-map-marker-alt"></i>
+                                        г. Сыктывкар</p></div>
+                                <p id="years"></p>
+                            </div>
+                        </div>
+                        <div class="left left-side__career">
+                            <h2>Коротко о карьере</h2>
+                            <div class="line"></div>
+                            <p>Опыт разработки многопоточных веб-сервисов на серверной и клиентской сторонах,
+                                с использованием Java, Spring Framework, Angular.
+                                На текущем месте работы занимаю должность старшего разработчика.</p>
+                        </div>
+                        <div class="left left-side__skills">
+                            <h2>Навыки</h2>
+                            <div class="line"></div>
+                            <p>Java • Spring Framework • Hibernate ORM • SQL • Maven/Gradle • JUnit • Mockito • Docker •
+                                Git</p>
+                        </div>
+                    </div>
+                    <div class="right-side">
+                        <div class="right-side__contacts">
+                            <h2><i class="fas fa-envelope-open"></i>Контакты</h2>
+                            <div class="line"></div>
+                            <p><i class="fas fas-mini fa-phone-alt"></i>+7(912)144-91-55</p>
+                            <p><i class="fas fas-mini fa-at"></i>borlok@bk.ru</p>
+                            <p><i class="fas fas-mini fa-paper-plane"></i>@borlok2</p>
+                        </div>
+                        <div class="right-side__languages">
+                            <h2><i class="fas fa-globe"></i>Языки</h2>
+                            <div class="line"></div>
+                            <div class="lan"></div>
+                            <div class="language">
+                                <div class="language__skill">
+                                    <p>Русский</p>
+                                    <div>
+                                        <i class="fas fas-mini fa-circle"></i>
+                                        <i class="fas fas-mini fa-circle"></i>
+                                        <i class="fas fas-mini fa-circle"></i>
+                                        <i class="fas fas-mini fa-circle"></i>
+                                        <i class="fas fas-mini fa-circle"></i>
+                                    </div>
+                                </div>
+                                <p class="language__skill-name">
+                                    Native
+                                </p>
+                            </div>
+                            <div class="language">
+                                <div class="language__skill">
+                                    <p>Английский</p>
+                                    <div>
+                                        <i class="fas fas-mini fa-circle"></i>
+                                        <i class="fas fas-mini fa-circle"></i>
+                                        <i class="far fas-mini fa-circle"></i>
+                                        <i class="far fas-mini fa-circle"></i>
+                                        <i class="far fas-mini fa-circle"></i>
+                                    </div>
+                                </div>
+                                <p class="language__skill-name">
+                                    A2(pre-intermediate)
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="about-layer about-layer__base" style="background-image: url(img/layer-base.png)"></div>
                 <div class="about-layer about-layer__middle" style="background-image: url(img/layer-middle.png)"></div>
                 <div class="about-layer about-layer__front" style="background-image: url(img/layer-front.png)"></div>
@@ -44,7 +116,8 @@
                 <div class="main-article__content">
                     <h1 class="main-article__header">To be continued...</h1>
                     <p class="main-article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Accusantium aliquid aspernatur atque consequuntur corporis ducimus, explicabo fuga in iusto mollitia officia quae quibusdam quidem ratione sapiente veniam vitae voluptas voluptatem.</p>
+                        Accusantium aliquid aspernatur atque consequuntur corporis ducimus, explicabo fuga in iusto
+                        mollitia officia quae quibusdam quidem ratione sapiente veniam vitae voluptas voluptatem.</p>
                 </div>
             </article>
         </div>
