rewrite career block

--- a/about.html
+++ b/about.html
@@ -39,20 +39,20 @@
                         <div class="left left-side__name">
                             <h1>Ерофеевский Юрий Александрович</h1>
                             <h3>Java Software Engineer</h3>
-                            <div style="display: flex; flex-direction: row; padding-right: 200px; font-size: calc(var(--index))">
+                            <div style="display: flex; flex-direction: row; font-size: calc(var(--index))">
                                 <div style="margin-right: calc(var(--index) * 5)">
-                                    <p>
-                                        <i class="fas fas-mini fa-map-marker-alt"></i>
-                                        г. Сыктывкар</p></div>
+                                    <p><i class="fas fas-mini fa-map-marker-alt"></i>г. Сыктывкар</p></div>
                                 <p id="years"></p>
                             </div>
                         </div>
                         <div class="left left-side__career">
                             <h2>Коротко о карьере</h2>
                             <div class="line"></div>
-                            <p>Опыт разработки многопоточных веб-сервисов на серверной и клиентской сторонах,
-                                с использованием Java, Spring Framework, Angular.
-                                На текущем месте работы занимаю должность старшего разработчика.</p>
+                            <p>В текущей компании занимаю должность ведущего инженера ПО.
+                                Занимаюсь разработкой многопоточной веб-платформы на серверной и клиентской сторонах,
+                                с использованием Java, Spring Framework, Angular. Принимал участие в проектных работах сторонних организаций,
+                                помогая им с интеграцией сервисов, решением проблем реализации бизнес-логики.
+                            </p>
                         </div>
                         <div class="left left-side__skills">
                             <h2>Навыки</h2>
@@ -77,11 +77,11 @@
                                 <div class="language__skill">
                                     <p>Русский</p>
                                     <div>
-                                        <i class="fas fas-mini fa-circle"></i>
-                                        <i class="fas fas-mini fa-circle"></i>
-                                        <i class="fas fas-mini fa-circle"></i>
-                                        <i class="fas fas-mini fa-circle"></i>
-                                        <i class="fas fas-mini fa-circle"></i>
+                                        <i class="fas fas-mini-lang fa-circle"></i>
+                                        <i class="fas fas-mini-lang fa-circle"></i>
+                                        <i class="fas fas-mini-lang fa-circle"></i>
+                                        <i class="fas fas-mini-lang fa-circle"></i>
+                                        <i class="fas fas-mini-lang fa-circle"></i>
                                     </div>
                                 </div>
                                 <p class="language__skill-name">
@@ -90,13 +90,13 @@
                             </div>
                             <div class="language">
                                 <div class="language__skill">
-                                    <p>Английский</p>
+                                    <p>English</p>
                                     <div>
-                                        <i class="fas fas-mini fa-circle"></i>
-                                        <i class="fas fas-mini fa-circle"></i>
-                                        <i class="far fas-mini fa-circle"></i>
-                                        <i class="far fas-mini fa-circle"></i>
-                                        <i class="far fas-mini fa-circle"></i>
+                                        <i class="fas fas-mini-lang fa-circle"></i>
+                                        <i class="fas fas-mini-lang fa-circle"></i>
+                                        <i class="far fas-mini-lang fa-circle"></i>
+                                        <i class="far fas-mini-lang fa-circle"></i>
+                                        <i class="far fas-mini-lang fa-circle"></i>
                                     </div>
                                 </div>
                                 <p class="language__skill-name">
@@ -106,9 +106,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="about-layer about-layer__base" style="background-image: url(img/layer-base.png)"></div>
-                <div class="about-layer about-layer__middle" style="background-image: url(img/layer-middle.png)"></div>
-                <div class="about-layer about-layer__front" style="background-image: url(img/layer-front.png)"></div>
             </div>
         </header>
         <div class="about-body">
