--- a/about.html
+++ b/about.html
@@ -109,13 +109,14 @@
             </div>
         </header>
         <div class="about-body">
-            <article class="main-article" style="background-image: url(img/dungeon.jpg)">
+            <article class="main-article" style="background-image: url(img/skill-back.jpg)">
                 <div class="main-article__content">
-                    <h1 class="main-article__header">To be continued...</h1>
-                    <p class="main-article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Accusantium aliquid aspernatur atque consequuntur corporis ducimus, explicabo fuga in iusto
-                        mollitia officia quae quibusdam quidem ratione sapiente veniam vitae voluptas voluptatem.</p>
+                    <div class="layer main-article__skills" style="background-image: url(img/Навыки.png)"></div>
                 </div>
+<!--                    <h1 class="main-article__header">To be continued...</h1>-->
+<!--                    <p class="main-article__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+<!--                        Accusantium aliquid aspernatur atque consequuntur corporis ducimus, explicabo fuga in iusto-->
+<!--                        mollitia officia quae quibusdam quidem ratione sapiente veniam vitae voluptas voluptatem.</p>-->
             </article>
         </div>
     </div>
