--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </div>
         <header class="about-main-header">
             <div class="about-layers">
-                <div class="profile">
+                <div class="profile" style="background-image: url(/img/обои.jpg)">
                     <div class="left-side">
                         <div class="left left-side__name">
                             <h1>Ерофеевский Юрий Александрович</h1>
