--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="content">
         <nav class="head-menu">
             <div class="logo">
                 <span class="logo-text">YE</span>
@@ -37,13 +36,15 @@
             </div>
         </nav>
 
+    <div class="content">
         <header class="main-hero">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
                         <span class="title-line">Юрий Ерофеевский</span>
                     </h1>
-                    <p class="hero-subtitle">4+ лет опыта в разработке в качестве Java Software Engineer. Специализация: высоконагруженные и отказоустойчивые системы</p>
+                    <p class="hero-subtitle">Более 4 лет опыта в разработке в качестве Java Software Engineer.</p>
+                    <p class="hero-subtitle" style="color: var(--primary-color);">Специализация: высоконагруженные и отказоустойчивые системы</p>
                     <div class="hero-info">
                         <p><i class="fas fa-map-marker-alt"></i> Россия, Сыктывкар</p>
                         <p><i class="fas fa-laptop-house"></i> Удалённая работа</p>
@@ -51,7 +52,7 @@
                         <br>
                     </div>
                     <div class="hero-cta">
-                        <a href="#projects" class="cta-button primary">Мои проекты</a>
+                        <a href="#experience" class="cta-button primary">Мои проекты</a>
                         <a href="about.html" class="cta-button secondary">Подробное резюме →</a>
                     </div>
                 </div>
@@ -184,7 +185,22 @@ public class ServiceConfig {
                             </div>
                             <p>Веб-платформа для работы с клиентами и документами, возможность настройки под любые сферы деятельности с использованием no-code и low-code для управления и оптимизации рабочих процессов.</p>
                         </div>
+                    </div><div class="timeline-item">
+                    <div class="timeline-date">Ноябрь 2021 — Февраль 2022</div>
+                    <div class="timeline-content">
+                        <h3>Java Software Engineer</h3>
+                        <h4>Atlantis TMS, Румыния (проектная работа)</h4>
+                        <ul class="timeline-list">
+                            <li>Интеграция с сервисом онлайн бухгалтерии "Intuit Quickbooks"</li>
+                            <li>Настройка REST взаимодействия микросервисов</li>
+                        </ul>
+                        <div class="timeline-skills">
+                            <span>Java 11</span>
+                            <span>Spring Boot</span>
+                            <span>Gradle</span>
+                        </div>
                     </div>
+                </div>
                 </div>
             </div>
         </section>
@@ -244,10 +260,11 @@ public class ServiceConfig {
                         <a href="about.html" class="footer-link">Обо мне</a>
                         <a href="#experience" class="footer-link">Экспертиза</a>
                     </div>
-                    <div class="footer-social">
-                        <a href="#" class="social-link"><i class="fab fa-telegram"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <div class="profile-social">
+                        <a href="https://t.me/borlok2" target="_blank" class="social-link"><i class="fab fa-telegram"></i></a>
+                        <a href="https://github.com/Borlok" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="https://career.habr.com/borlok" target="_blank" class="social-link"><i class="fab fa-hackerrank"></i></a>
+                        <a href="mailto:borlok@bk.ru" class="social-link"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="footer-copyright">
